--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,7 +3,7 @@ extends ./layout/_base
 include ./utils/_mixins
 
 block append variables
-	- const title = '3'
+	- const title = 'solovey'
 
 block content
 	header.outer.promo
